welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: not found: value i
    if(max2<nums(i) & nums(i)<max)
                 ^max2Value:10: error: not found: value i
    if(max2<nums(i) & nums(i)<max)
                           ^max2Value:11: error: reassignment to val
    	max2=nums(i)
            ^