welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var max=nums(0)
  def max2=nums(0)
  for (i<-0 to nums.length-1){
    if (max<nums(i))
    	max=nums(i)
  }
  nums(-1)=max
  for (j<-0 to nums.length-2){
    if(max2<nums(i) & nums(i)<max)
    	max2=nums(i)
  }
 	return max2
}